test/libsolidity/syntaxTests/array/invalidCopy/storage_to_storage_static_longer_to_shorter.sol
contract C {
    uint256[10] data1;
    uint256[18] data2;
    function f() external {
        data1 = data2;
    }
}
// ----
// TypeError 7407: (103-108): Type uint256[18] storage ref is not implicitly convertible to expected type uint256[10] storage ref.
